@@ -23,14 +23,14 @@ class ContentDigestTest {
 
     @Test
     void buildsDigestHeaderFromWireBody() {
-        var vector = TestVectors.firstById("digest", "digest-sha256");
+        JsonNode vector = TestVectors.firstById("digest", "digest-sha256");
         byte[] body = Codec.utf8(vector.path("input").asText());
         assertEquals(vector.path("expectedHeader").asText(), ContentDigest.build(RSA, body));
     }
 
     @Test
     void buildsSm3HeaderForSm2Suite() {
-        var vector = TestVectors.firstById("digest", "digest-sm3");
+        JsonNode vector = TestVectors.firstById("digest", "digest-sm3");
         byte[] body = Codec.utf8(vector.path("input").asText());
         assertEquals(vector.path("expectedHeader").asText(), ContentDigest.build(SM2, body));
     }
@@ -64,40 +64,51 @@ class ContentDigestTest {
             String expect = rule.path("expect").asText();
             AlgorithmSuite suite = AlgorithmSuite.parse(rule.path("suite").asText("WOP-RSA3072-SHA256"));
             switch (id) {
-                case "header-rsa-ok", "header-sm2-ok" -> {
+                case "header-rsa-ok":
+                case "header-sm2-ok": {
                     assertEquals("accept", expect, id + " expect 哨兵");
                     ContentDigest.parse(value, suite);
+                    break;
                 }
-                case "header-crossfamily", "header-double-space",
-                     "header-uppercase-hex", "header-wrong-hex-len" -> {
+                case "header-crossfamily":
+                case "header-double-space":
+                case "header-uppercase-hex":
+                case "header-wrong-hex-len": {
                     assertEquals("reject", expect, id + " expect 哨兵");
                     WopSdkException ex = assertThrows(WopSdkException.class,
                             () -> ContentDigest.parse(value, suite), id + " 须拒收");
                     // 错误明确指出格式问题（解析类，非模糊）
-                    assertTrue(ex.getMessage() != null && !ex.getMessage().isBlank());
+                    assertTrue(ex.getMessage() != null && !ex.getMessage().trim().isEmpty());
+                    break;
                 }
-                case "b64url-with-padding", "b64url-illegal-char",
-                     "b64url-trailing-bits-noncanonical-2", "b64url-trailing-bits-noncanonical-3" -> {
+                case "b64url-with-padding":
+                case "b64url-illegal-char":
+                case "b64url-trailing-bits-noncanonical-2":
+                case "b64url-trailing-bits-noncanonical-3": {
                     assertEquals("reject", expect, id + " expect 哨兵");
                     assertThrows(IllegalArgumentException.class,
                             () -> Codec.b64UrlDecode(value), id + " 须拒收");
+                    break;
                 }
-                case "b64url-trailing-bits-canonical-2" -> {
+                case "b64url-trailing-bits-canonical-2": {
                     assertEquals("accept", expect, id + " expect 哨兵");
                     assertArrayEquals(new byte[]{0x00}, Codec.b64UrlDecode(value));        // "AA"
+                    break;
                 }
-                case "b64url-trailing-bits-canonical-3" -> {
+                case "b64url-trailing-bits-canonical-3": {
                     assertEquals("accept", expect, id + " expect 哨兵");
                     assertArrayEquals(new byte[]{0x4D, 0x61}, Codec.b64UrlDecode(value));  // "TWE" → "Ma"
+                    break;
                 }
-                default -> throw new IllegalStateException("未预期 formatRules 向量 id: " + id);
+                default:
+                    throw new IllegalStateException("未预期 formatRules 向量 id: " + id);
             }
         }
     }
 
     @Test
     void parseExtractsHexForRecompute() {
-        var vector = TestVectors.firstById("digest", "digest-sha256");
+        JsonNode vector = TestVectors.firstById("digest", "digest-sha256");
         ContentDigest.Parsed parsed = ContentDigest.parse(vector.path("expectedHeader").asText(), RSA);
         assertEquals(vector.path("expectedHex").asText(), parsed.hex());
         assertEquals("sha-256", parsed.label());
